Fixed spacing issues with batido_de_mamey.html, added two higher quality images to the page, following the format of quimbombo

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,12 @@ html {
     margin-right: auto;
 }
 
+.ingredients {
+    min-width: 300px; 
+    float: left; 
+    margin: 10px;
+}
+
 .flex-pic{
     flex-basis: 700px;
     flex-grow: 3;
